New: Added keyboard key grab option to main form.

--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -247,6 +247,8 @@ down = Posun dolu
 selection = Aktuálně vybraný příkaz
 selection_command = Příkaz:
 selection_keyboard = Klávesnice:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Klávesa:
 selection_keyboard_modifiers = Modifikátor:
 selection_keyboard_modifiers_shift = Shift
