--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -247,6 +247,8 @@ down = Nach unten
 selection = Zur Zeit ausgewählter Befehl
 selection_command = Befehl:
 selection_keyboard = Tastatur:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Taste:
 selection_keyboard_modifiers = Modifizierer:
 selection_keyboard_modifiers_shift = Shift
