--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -251,6 +251,8 @@ down = Move down
 selection = Currently selected command
 selection_command = Command:
 selection_keyboard = Keyboard:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Key:
 selection_keyboard_modifiers = Modifiers:
 selection_keyboard_modifiers_shift = Shift
