--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -247,6 +247,8 @@ down = Mover abajo
 selection = Comando seleccionado
 selection_command = Commando:
 selection_keyboard = Teclado:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Tecla:
 selection_keyboard_modifiers = Modificadores:
 selection_keyboard_modifiers_shift = Shift
