--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -247,6 +247,8 @@ down = Vers le bas
 selection = Commande actuellement sélectionnée
 selection_command = Commande :
 selection_keyboard = Clavier :
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Touche:
 selection_keyboard_modifiers = Modificateurs :
 selection_keyboard_modifiers_shift = Shift
