--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -247,6 +247,8 @@ down = Sposta in basso
 selection = Comando selezionato
 selection_command = Comando:
 selection_keyboard = Tastiera:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Tasto:
 selection_keyboard_modifiers = Modificatore:
 selection_keyboard_modifiers_shift = Shift
