--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -247,6 +247,8 @@ down = 아래로 이동
 selection = 선택된 명령
 selection_command = 명령:
 selection_keyboard = 키보드:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = 키:
 selection_keyboard_modifiers = 기능키:
 selection_keyboard_modifiers_shift = Shift
