--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -247,6 +247,8 @@ down = Muta jos
 selection = Comanda selectata în acest moment:
 selection_command = Comanda:
 selection_keyboard = Tastatură:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Tasta:
 selection_keyboard_modifiers = Modificatori:
 selection_keyboard_modifiers_shift = Shift
