--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -247,6 +247,8 @@ down = Вниз
 selection = Выбранная команда
 selection_command = Команда:
 selection_keyboard = Клавиатура:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Клавиша:
 selection_keyboard_modifiers = Модификаторы:
 selection_keyboard_modifiers_shift = Shift
