--- a/openBVE/OpenBve/Data/Languages/zh-HK.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-HK.cfg
@@ -247,6 +247,8 @@ down = 下移
 selection = 現時控制模式
 selection_command = 指令：
 selection_keyboard = 鍵盤：
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = 鍵：
 selection_keyboard_modifiers = 功能鍵：
 selection_keyboard_modifiers_shift = Shift
