--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -247,6 +247,8 @@ down = Mou avall
 selection = Funció seleccionada actualment
 selection_command = Funció:
 selection_keyboard = Teclat:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Tecla:
 selection_keyboard_modifiers = Modificadors:
 selection_keyboard_modifiers_shift = Shift
