--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -247,6 +247,8 @@ down = Siirry alaspäin
 selection = Tämänhetkinen komento:
 selection_command = Komento:
 selection_keyboard = Näppäimistö:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Painike:
 selection_keyboard_modifiers = Muokkaajat:
 selection_keyboard_modifiers_shift = Shift
