--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -247,6 +247,8 @@ down = Mozgatás lefele
 selection = Kiválasztott parancs
 selection_command = Parancs:
 selection_keyboard = Billentyűzet:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Gomb:
 selection_keyboard_modifiers = Módosító:
 selection_keyboard_modifiers_shift = Shift
