--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -247,6 +247,8 @@ down = 下へ
 selection = 選択中
 selection_command = コマンド:
 selection_keyboard = キーボード:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = キー:
 selection_keyboard_modifiers = 同時押し:
 selection_keyboard_modifiers_shift = Shift
