--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -247,6 +247,8 @@ down = Naar beneden
 selection = Geselecteerde commando
 selection_command = Commando:
 selection_keyboard = Toetsenbord:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Toets:
 selection_keyboard_modifiers = Functietoets:
 selection_keyboard_modifiers_shift = Shift
