--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -247,6 +247,8 @@ down = Przenieś niżej
 selection = Aktualnie wybrana komenda
 selection_command = Komenda:
 selection_keyboard = Klawiatura
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Klawisz:
 selection_keyboard_modifiers = Dodatkowo:
 selection_keyboard_modifiers_shift = Shift
