--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -247,6 +247,8 @@ down = Para baixo
 selection = Comando selecionado
 selection_command = Comando:
 selection_keyboard = Teclado:
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Tecla:
 selection_keyboard_modifiers = Modificadores:
 selection_keyboard_modifiers_shift = Maiúsculas
