--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -247,6 +247,8 @@ down = Перенести донизу
 selection = Обране
 selection_command = Команда:
 selection_keyboard = Клавіатура
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = Клавіша:
 selection_keyboard_modifiers = Додатково:
 selection_keyboard_modifiers_shift = Shift
