--- a/openBVE/OpenBve/Data/Languages/zh-CN.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-CN.cfg
@@ -247,6 +247,8 @@ down = 搬下
 selection = 已选择命令
 selection_command = 命令：
 selection_keyboard = 键盘：
+selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
+selection_keyboard_assignment_grabbing = Please press any key...
 selection_keyboard_key = 按键：
 selection_keyboard_modifiers = 修饰键：
 selection_keyboard_modifiers_shift = Shift
