Remove duplicate string from language files.
Fix: Potential crash when monitoring route directory, maybe fixes the menu crash.

--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-07-12
+; last updated: 2016-10-07
 ; by Phonteus Nevolius
 
 [program]
@@ -144,8 +144,8 @@ install_version_same = A kiválasztott csomag már telepítve van és azonos ver
 install_success = A csomag telepítése sikerült.
 install_success_header = Sikeres telepítés
 install_success_files = A telepített fájlok listája alább látható:
-install_failure = Unfortunately, package installation failed.
-install_failure_header = Package Installation Failed
+install_failure = Sajnos nem sikerült telepíteni a csomagot.
+install_failure_header = A csomag telepítése sikertelen
 install_select = Csomag kiválasztása......
 install_dependancies_unmet = A jelenlegi csomagnak nem teljesülő függőségei vannak.
 install_dependancies_unmet_header = Függőségi hiba
@@ -179,9 +179,9 @@ creation_version_invalid = Érvénytelen verziószámot adott meg. \r\n Kérjük
 creation_success = A csomag létrehozása sikeresen megtörtént.
 creation_success_header = Sikeres csomagkészítés
 creation_success_files = A következő fájlok kerültek a csomagba:
-creation_failure = Unfortunately, creation of your package failed.
-creation_failure_header = Package Creation Failed
-creation_failure_error = The following error was encountered:
+creation_failure = Sajnos nem sikerült létrehozni a csomagot.
+creation_failure_header = A csomag létrehozása sikertelen
+creation_failure_error = A következő hiba történt:
 creation_proceed = Folytatás......
 creation_invalid_filename = A kiválasztott fájlnév érvénytelen - próbálja újra.
 creation_new_id = Az új csomag a következő GUID azonosítót kapta:
@@ -223,10 +223,10 @@ button_install = Telepítés
 button_create = Létrehozás
 button_ignore = Figyelmen kívül hagyás
 button_abort = Megszakítás
-filename_empty = Attempted to create a package with an empty filename.
-directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
-directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
-file_generic = Failed to create the following file: \r \n
+filename_empty = Üres fájlnévvel próbált csomagot létrehozni.
+directory_missing = A könyvtár, ahova menteni kívánta a fájlt nem létezik: \r \n
+directory_nowrite = Nincs írásjoga a könyvtárhoz, ahova menteni kívánta a fájlt: \r \n
+file_generic = Nem sikerült létrehozni a következő fájlt: \r \n
 
 [controls]
 title = A kezelőszervek beállítása
@@ -247,8 +247,8 @@ down = Mozgatás lefele
 selection = Kiválasztott parancs
 selection_command = Parancs:
 selection_keyboard = Billentyűzet:
-selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
-selection_keyboard_assignment_grabbing = Please press any key...
+selection_keyboard_assignment_grab = Kattintson ide a billentyűlenyomások érzékeléséhez a kívánt gomb automatikus kiválasztásához.
+selection_keyboard_assignment_grabbing = Nyomjon meg egy gombot...
 selection_keyboard_key = Gomb:
 selection_keyboard_modifiers = Módosító:
 selection_keyboard_modifiers_shift = Shift
@@ -477,7 +477,6 @@ rating = Eredmény:
 unknown = Ismeretlen
 
 [menu]
-back = ← Back
 resume = A játék folytatása
 jump = Állomáshoz ugrás
 exit = Kilépés a főmenübe
