Tweak: Rename the BackgroundManager file.
Fix: Incorrect error message when using dynamic lighting.
Fix: Missing spaces in some error declarations.
Fix: Dynamic background times were not sorted.

--- a/openBVE/OpenBve/OpenBve.csproj
+++ b/openBVE/OpenBve/OpenBve.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Simulation\TrainManager\Doors.cs" />
     <Compile Include="Simulation\TrainManager\Passengers.cs" />
     <Compile Include="Simulation\TrainManager\Station.cs" />
-    <Compile Include="Simulation\World\Background.cs" />
+    <Compile Include="Simulation\World\BackgroundManager.cs" />
     <Compile Include="Simulation\World\Transformations.cs" />
     <Compile Include="System\Functions\CrashHandler.cs" />
     <Compile Include="System\Functions\FolderBrowserDialog.cs" />
