Change: Improve error messages for incomplete route files
Closes https://github.com/leezer3/OpenBVE/issues/114

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -49,6 +49,7 @@ sound_openal_device = No s'ha pogut obrir el dispositiu de so OpenAL.
 fullscreen_switch1 = S'ha produït un error en canviar al mode de pantalla completa. 
 fullscreen_switch2 = Comproveu la configuració de resolució de pantalla completa.
 route_corrupt_withtrack = La ruta seleccionada està corrompuda: \r\n No s'ha trobat la secció WithTrack.
+route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
 plugin_failure1 = No s'ha pogut carregar l'extensió del tren [plugin]. 
 plugin_failure2 = S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles.
 
