--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -49,6 +49,7 @@ sound_openal_device = Az OpenAL hangeszközt nem lehetett megnyitni.
 fullscreen_switch1 = Hiba történt teljes képernyőre váltás közben.
 fullscreen_switch2 = Kérjük, ellenőrizze a teljes képernyős felbontás beállításait.
 route_corrupt_withtrack = A kiválasztott pálya sérült: hiányzik a \r\n WithTrack szakasz.
+route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
 plugin_failure1 = A [plugin] vonat plugin nem töltődött be. 
 plugin_failure2 = Helyette a beépített ATS/ATC rendszert használjuk, ami zavart okozhat.
 
