--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -49,6 +49,7 @@ sound_openal_device = Zvukové zařízení OpenAL nemohlo být otevřeno.
 fullscreen_switch1 = Vyskytla se chyba při přepínání do zobrazení celé obrazovky.
 fullscreen_switch2 = Prosím zkontrolujte příslušné nastavené rozlišení v nastavení.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
