--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -49,6 +49,7 @@ sound_openal_device = Das 'OpenAL sound device' konnte nicht geöffnet werden.
 fullscreen_switch1 = Beim Versuch, in den Vollbildmodus zu wechseln, ist ein Fehler aufgetreten.
 fullscreen_switch2 = Bitte die eingestellte Vollbildauflösung kontrollieren.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
