--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -49,6 +49,7 @@ sound_openal_device = The OpenAL sound device could not be opened.
 fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
 fullscreen_switch2 = Please check your fullscreen resolution settings.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
