Updated ca_ES translation
Fixed some unstranslated strings in Package Management

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -1,5 +1,5 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-07-06
+; last updated: 2016-11-27
 ; by Marc Riera Irigoyen
 
 [program]
@@ -51,7 +51,7 @@ fullscreen_switch2 = Comproveu la configuració de resolució de pantalla comple
 route_corrupt_withtrack = La ruta seleccionada està corrompuda: \r\n No s'ha trobat la secció WithTrack.
 route_corrupt_nostations = The selected route is corrupt: \r\n No stations defined.
 plugin_failure1 = No s'ha pogut carregar l'extensió del tren [plugin]. 
-plugin_failure2 = S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles.
+plugin_failure2 = S'utilitzaran els sistemes ATS/ATC per defecte, que podrien ser incompatibles.
 
 [start]
 title = Inicia una nova partida
@@ -81,7 +81,7 @@ train_settings = Configuració
 train_settings_encoding = Codificació:
 train_settings_encoding_preview = Previsualització:
 train_notfound = No s'ha pogut trobar el tren predeterminat:\n\n
-train_pluginnotsupported = --- Aquest tren utilitza una extensió de sistema de seguretat incompatible amb el vostre sistema operatiu. S'utilitzaran els sistemes ATS/ATC per defecte, que poden ser incompatibles. ---
+train_pluginnotsupported = --- Aquest tren utilitza una extensió de sistema de seguretat incompatible amb el vostre sistema operatiu. S'utilitzaran els sistemes ATS/ATC per defecte, que podrien ser incompatibles. ---
 start = Inicia
 start_mode = Mode de conducció:
 start_start = Inicia
@@ -145,8 +145,8 @@ install_version_same = Ja hi ha instal·lada la mateixa versió del paquet selec
 install_success = S'han instal·lat els paquets correctament.
 install_success_header = Instal·lació completada
 install_success_files = Llistat de fitxers instal·lats:
-install_failure = Unfortunately, package installation failed.
-install_failure_header = Package Installation Failed
+install_failure = Ha fallat la instal·lació del paquet.
+install_failure_header = Error d'instal·lació
 install_select = Selecciona un paquet...
 install_dependancies_unmet = El paquet actual té dependències que no es poden resoldre.
 install_dependancies_unmet_header = Error de dependències
@@ -180,9 +180,9 @@ creation_version_invalid = Heu triat un número de versió no vàlid. \r\n Torne
 creation_success = S'ha creat el paquet correctament.
 creation_success_header = Paquet creat correctament
 creation_success_files = S'han afegit els fitxers següents al paquet:
-creation_failure = Unfortunately, creation of your package failed.
-creation_failure_header = Package Creation Failed
-creation_failure_error = The following error was encountered:
+creation_failure = Ha fallat la creació del paquet.
+creation_failure_header = Error de creació
+creation_failure_error = S'ha trobat el problema següent:
 creation_proceed = Continua...
 creation_invalid_filename = El nom del fitxer no és vàlid. \r\n Torneu-ho a intentar.
 creation_new_id = El nou paquet té assignat el següent GUID:
@@ -224,10 +224,10 @@ button_install = Instal·la
 button_create = Crea
 button_ignore = Ignora
 button_abort = Avorta
-filename_empty = Attempted to create a package with an empty filename.
-directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
-directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
-file_generic = Failed to create the following file: \r \n
+filename_empty = El nom de fitxer del paquet està en blanc.
+directory_missing = La carpeta de destinació del paquet no existeix: \r \n
+directory_nowrite = No teniu permís per modificar la carpeta de destinació del paquet: \r \n
+file_generic = No s'ha pogut crear el fitxer següent: \r \n
 
 [controls]
 title = Personalitza els controls
@@ -249,7 +249,7 @@ selection = Funció seleccionada actualment
 selection_command = Funció:
 selection_keyboard = Teclat:
 selection_keyboard_assignment_grab = Click here to enable keyboard grab to automatically select the desired key.
-selection_keyboard_assignment_grabbing = Please press any key...
+selection_keyboard_assignment_grabbing = Premeu qualsevol tecla...
 selection_keyboard_key = Tecla:
 selection_keyboard_modifiers = Modificadors:
 selection_keyboard_modifiers_shift = Shift
@@ -318,7 +318,7 @@ quality_interpolation_transparency_smooth = Suau
 quality_distance = Efectes de distància
 quality_distance_viewingdistance = Distància visible:
 quality_distance_viewingdistance_meters = m
-quality_distance_motionblur = Motion blur:
+quality_distance_motionblur = Arrossegament de la imatge:
 quality_distance_motionblur_none = Desactivat
 quality_distance_motionblur_low = Baix
 quality_distance_motionblur_medium = Mitjà
