Update hu-HU language file

--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -17,7 +17,7 @@ review = Előző játék
 getaddons = Kiegészítők telepítése
 controls = Kezelőszervek
 options = Beállítások
-homepage = Az openBVE weboldala
+homepage = Hivatalos weboldal
 updates = Frissítések keresése
 updates_invalid = Sikerült kapcsolódni a kiszolgálóhoz, de a verzióinformációkat nem lehetett elérni.
 updates_old = A legújabb programverziót használja.
