Missing translations on some package related buttons.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -219,6 +219,7 @@ error_overwrite = Sobreescriu-lo
 error_replace = Reemplaça'l
 button_next = Següent >
 button_back = < Enrere
+button_ok = OK
 button_cancel = Cancel·la
 button_install = Instal·la
 button_create = Crea
