--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -219,6 +219,7 @@ error_overwrite = Felülír
 error_replace = Cserél
 button_next = Következő >
 button_back = < Előző
+button_ok = OK
 button_cancel = Mégsem
 button_install = Telepítés
 button_create = Létrehozás
