--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -220,6 +220,7 @@ error_replace = Replace
 button_next = Next >
 button_back = < Back
 button_cancel = Cancel
+button_ok = OK
 button_install = Install
 button_create = Create
 button_ignore = Ignore
