--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -219,6 +219,7 @@ error_overwrite = Overwrite
 error_replace = Replace
 button_next = Next >
 button_back = < Back
+button_ok = OK
 button_cancel = Cancel
 button_install = Install
 button_create = Create
