--- a/openBVE/OpenBve/OpenBve.csproj
+++ b/openBVE/OpenBve/OpenBve.csproj
@@ -113,7 +113,9 @@
     <Compile Include="Game\Menu.cs" />
     <Compile Include="Game\RouteConstants.cs" />
     <Compile Include="Graphics\Renderer\Background.cs" />
+    <Compile Include="Graphics\Renderer\Colors.cs" />
     <Compile Include="Graphics\Renderer\Functions.cs" />
+    <Compile Include="Graphics\Renderer\Glow.cs" />
     <Compile Include="Graphics\Renderer\Lamp.cs" />
     <Compile Include="Graphics\Renderer\Lighting.cs" />
     <Compile Include="Graphics\Renderer\MotionBlur.cs" />
