--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: csharp
+solution: OpenBVE.sln
 
 os:
   - linux
@@ -7,7 +8,7 @@ mono:
  - latest
  
 script:
-  - LC_ALL=C xbuild /t:Build /p:Configuration=Release OpenBve.sln
+  - LC_ALL=C xbuild /t:Build /p:Configuration=Release OpenBVE.sln
 after_success:
 #Export SSH password for whichever platform we are building on
  - test $TRAVIS_PULL_REQUEST == "false" && (test $TRAVIS_BRANCH == "master" || test $TRAVIS_TAG) && export SSHPASS=$DEPLOY_PASS
