--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -91,4 +91,8 @@
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
   </ItemGroup>
+  <PropertyGroup>
+    <PreBuildEvent>echo Resoloving dependencies
+xcopy /E /Y "$(SolutionDir)dependencies" "$(TargetDir)"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
