--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ mono:
  - latest
  
 script:
-  - make release
+  - make all-release
 after_success:
 #Export SSH password for whichever platform we are building on
  - test $TRAVIS_PULL_REQUEST == "false" && (test $TRAVIS_BRANCH == "master" || test $TRAVIS_TAG) && export SSHPASS=$DEPLOY_PASS
