Initial implementation of a Compatibility Object Manager
TODO:
* Improve logging when compatibility objects are used.
* Implement in Route Viewer (Raise errors in Route Viewer only- Using these is probably bad practice...)
* TEST!!!

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Graphics\Renderer\Overlays.cs" />
     <Compile Include="Graphics\Renderer\Structures.cs" />
     <Compile Include="Graphics\Renderer\Objects.cs" />
+    <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.CompatibilityObjects.cs" />
     <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.Functions.cs" />
     <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.Objects.cs" />
     <Compile Include="OldParsers\BveRouteParser\CsvRwRouteParser.Structures.cs" />
